Fixing bug where underlined text doesn't show on safari #27

--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,8 @@ body {
 
 .underline {
   text-decoration: underline solid var(--colorBlack) 2px;
+  /* stylelint-disable-next-line property-no-vendor-prefix */
+  -webkit-text-decoration-line: underline;
   text-underline-offset: 3px;
 }
 
